# mini-chat

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml
.claude/: settings.local.json
.devcontainer/: docker-compose.override.yml  on-create.sh
backend/: API_STRUCTURE.md  README.md  pyproject.toml
backend/mini_chat/: __init__.py  admin_cli.py  config.py  database.py  dependencies.py  main.py  subscriptions.py
backend/mini_chat/admin/: routes.py  schemas.py  services.py
backend/mini_chat/auth/: routes.py  schemas.py  services.py
backend/mini_chat/messages/: routes.py  schemas.py  services.py
backend/mini_chat/rooms/: routes.py  schemas.py  services.py  websocket.py
backend/mini_chat/server/: routes.py  schemas.py  services.py
backend/mini_chat/users/: routes.py  schemas.py  services.py
backend/util/: git-branch-no-wip
docs/: end-to-end-encryption.md  planning-feature-list.md  playwright-webauthn-testing.md
frontend/: README.md  chat.html  index.html  package-lock.json  package.json  register.html  vite.config.js
frontend/src/: chat.js  login.js  main.js  register.js  style.css  utils.js
